# semicon-anomaly

./: .dockerignore  CONTAINER_GUIDE.md  Dockerfile  Dockerfile.multistage  README.md  README.md.bak  UV_GUIDE.md  app.py  data_generator.py  docker-compose.yml  environment.yml  moment_detector.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  setup.bat  setup.sh  test_moment.py  uv_run.bat  uv_run.sh
data/: semiconductor_process_data.csv
static/css/: styles.css
static/js/: main.js
templates/: index.html
