[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anomaly-detection-app"
version = "1.0.0"
description = "반도체 공정 이상치 탐지 시스템 - MOMENT 파운데이션 모델 활용"
readme = "README.md"
authors = [
    {name = "Developer", email = "dev@example.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "starlette==0.34.0",
    "uvicorn==0.27.1",
    "pandas==2.0.3",
    "numpy==1.25.2",
    "scikit-learn==1.4.0",
    "plotly==5.18.0",
    "jinja2==3.1.3",
    "python-multipart==0.0.7",
    "torch>=2.0.0",
    "momentfm>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "black>=23.3.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/anomaly-detection-app"
"Bug Tracker" = "https://github.com/yourusername/anomaly-detection-app/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app.py", "moment_detector.py", "data_generator.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
